--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jahir porfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="orange-color">Bhuiyan's</span> World !</h1>
+            <h3>Building Climber and Train Stopper</h3>
+            <p>You must saw me jumping, Climbing buildings and stopping Trains But nobody pay me a dimes for the work.
+                Thats why I am Learning and Mastering web development. I will not stop until become the web
+                development hero.</p>
+            <a class="link-button" target="_blank" href="https://www.facebook.com/profile.php?id=100007364478669">HIRE
+                ME</a>
+        </div>
+        <div class="half-width"><img src="images/my-bg1.png" alt=""></div>
+    </section>
+
 </body>
+
 </html>
